--- a/assets/adminthemes/caribbean-blue/admin-theme-colours-caribbean-blue.css
+++ b/assets/adminthemes/caribbean-blue/admin-theme-colours-caribbean-blue.css
@@ -58,7 +58,7 @@ a:hover { color: #00cccc; }
 }
 
 .credits-admin {
-    color: #4A6878;
+    color: #3a7a8a;
 }
 
 /* 03: MAIN HEADERS */
