--- a/assets/adminthemes/mi-casa-es-su-picasa/admin-theme-colours-mi-casa-es-su-picasa.css
+++ b/assets/adminthemes/mi-casa-es-su-picasa/admin-theme-colours-mi-casa-es-su-picasa.css
@@ -58,7 +58,7 @@ a:hover { color: #008a8a; }
 }
 
 .credits-admin {
-    color: #555555;
+    color: #2e7070;
 }
 
 /* 03: MAIN HEADERS */
