--- a/assets/adminthemes/the-black-pearl/admin-theme-colours-the-black-pearl.css
+++ b/assets/adminthemes/the-black-pearl/admin-theme-colours-the-black-pearl.css
@@ -58,7 +58,7 @@ a:hover { color: #cccccc; }
 }
 
 .credits-admin {
-    color: #333333;
+    color: #666666;
 }
 
 /* 03: MAIN HEADERS */
